--- a/HTML & CSS - Figma/media_queries.css
+++ b/HTML & CSS - Figma/media_queries.css
@@ -88,11 +88,31 @@
         padding: 50px;
     } */
 
+    .contact-div {
+        gap: 10px;
+        margin: 0 auto;
+        width: 80%;
+    }
+
+    /* .contact-div > img {
+        max-width: 50%;
+        max-height: 50%;
+    } */
+
     form {
         gap: 10px;
     }
+
+    input{
+        width: 100%;
+        height: 55px;
+        padding: 10px;
+    }
+    
+    textarea{
+        width: 100%;
+        height: 201px;
+        padding: 10px;
+        resize: none;
+    }
 }
-
-
-
-
